add html buttons, js stuff

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+        <div>
+                <button class="ButtonRock">Rock</button>
+                <button class="ButtonPaper">Paper</button>
+                <button class="ButtonScissors">Scissors</button>
+        </div>
 </body>
 
 </html>
